# booking-bot

./: Horarios_actualizacion_25_Marzo.docx  MANUAL CENTRAL SUITES FERIAL.docx  README.md  final_login.html  login_template.html  page_d-edge.html  pyproject.toml  requirements.txt  test.html  test.py  ~$rarios_actualizacion_25_Marzo.docx
app/: D_Edge.py  admin.py  apps.py  booking - copia (2).py  booking - copia.py  booking.py  booking2.py  bookingV2.py  fee.json  fee.py  generate_sample_date.py  green_correction.py  models.py  notification.py  now_date.py  serializer.py  suitesferia.py  tasks.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20240106_0111.py  0003_auto_20240429_1226.py  0004_auto_20240429_1233.py  0005_auto_20240429_1240.py  0006_auto_20240429_1427.py  0007_processactive.py  0008_processactive_active.py  0009_availablebooking_position.py  0010_availablebooking_total_search.py  0011_processactive_position.py  0012_availablebooking_currenct.py  0013_auto_20240620_1030.py  0014_processactive_time_sleep_minutes.py  0015_generalsearch.py  0016_auto_20240724_1152.py  0017_availsuitesferia_cantavailsuitesferia.py  0018_auto_20240806_1410.py  0019_availablebooking_start.py  0020_eventbyday_messagebyday_price.py  0021_auto_20240809_1250.py  0022_temporadabyday.py  0023_rename_numer_temporadabyday_number.py  0024_alter_temporadabyday_bg_color.py  0025_auto_20240825_1816.py  0026_availwithdate.py  (+57 more)
booking/: settings.py  urls.py
service/: booking  booking.service  booking.socket
static/: CHANGELOG.md  README.md  index.html  package.json
(+125 files in other folders)
